--- a/src/app/pages/forms/pais/pais.component.html
+++ b/src/app/pages/forms/pais/pais.component.html
@@ -16,101 +16,177 @@
 </div>
 
 
+
 <section class="section dashboard accordion">
     <div class="container">
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        Información Básica
-                </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
+        <div class="row">
+            <div class="col-md-6 form-group">
+                <form [formGroup]="paisForm"   id="kt_project_settings_form"
+                    class="form fv-plugins-bootstrap5 fv-plugins-framework" novalidate="novalidate">
+                    <div class="card">
+                        <div class="card-header">
+                            <b>Datos Pais</b>
+                        </div>
+                        
                         <div class="card-body">
-                            <div class="card">
-                                <div class="card-body blog-form">
-                                    <form [formGroup]="paisForm" (ngSubmit)="onSubmit(paisForm)" class="form-horizontal form-material">
-                                        <div class="row">
-                                            <div class="col-xs-12 col-sm-4">
-                                                <label class="col-md-3">Título </label>
-                                                <div class="col-md-9">
-                                                    <input type="text" formControlName="title" class="form-control" placeholder="Title">
-                
-                                                </div>
-                                            </div>
-                
-                
-                                            <div class="col-xs-12 col-sm-4">
-                                                <label class="col-md-3">Código </label>
-                                                <div class="col-md-9">
-                
-                                                    <select formControlName="code" class="form-control" name="code">
-                                                      <option *ngFor="let pais of countries" [value]="pais.code">
-                                                        {{pais.code}} | {{pais.title}}
-                                                      </option>
-                                                    </select>
-                
-                                                </div>
-                                            </div>
-                
-                                            <div class="col-xs-12 col-sm-4">
-                                                <label class="col-md-3">Activo</label>
-                                                <div class="col-md-9">
-                                                    <input type="radio" formControlName="isActive" value="isVisible" /> Yes
-                                                    <input type="radio" formControlName="isActive" value="noVisible" /> No
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <br>
-                                        <div class="form-group form-row">
-                                            <label class="col-md-3">Información</label>
-                                            <div class="col-md-9">
-                                                <textarea class="form-control"  name="informacion" formControlName="informacion" rows="5" cols="30"></textarea>
-                                                <!-- <ng-container #ckeditor1>
-                                                    <ckeditor [editor]="editorData"  formControlName="informacion" rows="5" class="form-control" placeholder="Direccion"> </ckeditor>
-                                                  </ng-container> -->
-                                            </div>
-                                        </div>
-                                        <div class="form-group form-row">
-                                            <label class="col-md-3">Ciudades</label>
-                                            <div class="col-md-9">
-                                                <textarea class="form-control"  name="ciudades" formControlName="ciudades" rows="5" cols="30"></textarea>
-                                                <!-- <ng-container #ckeditor2>
-                                                    <ckeditor [editor]="editorDatac"  formControlName="ciudades" rows="5" class="form-control" placeholder="ciudades"> </ckeditor>
-                                                  </ng-container> -->
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-6">
+                                    <label >Código </label>
+                                    <div class="col-md-9">
+    
+                                        <select formControlName="code" class="form-control" name="code">
+                                          <option *ngFor="let pais of countries" [value]="pais.code">
+                                            {{pais.code}} | {{pais.title}}
+                                          </option>
+                                        </select>
+    
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-6">
+                                    <label >Nombre País </label>
+                                    <div class="col-md-9">
+                                        <input type="text" formControlName="title" class="form-control" placeholder="Title">
+    
+                                    </div>
+                                </div>
+    
+    
+    
+                                <div class="col-xs-12 ">
+                                    <label >Activo?</label>
+                                    <div class="col-md-9">
+                                        <input type="radio" formControlName="isActive" value="isVisible" /> Yes
+                                        <input type="radio" formControlName="isActive" value="noVisible" /> No
+                                    </div>
+                                </div>
+                            </div>
+    
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div class="row align-items-center" >
+                                        <h3 class="card-title">Agregar Ciudades</h3>
+                                        
+                                        <div class="col-xs-12 col-md-6 col-xl-6">
+                                            <div class="form-group local-forms">
+                                                <label>Ciudad <span class="login-danger">*</span></label>
+                                                <input class="form-control"  name="ciudad"[ngModelOptions]="{standalone: true}"    [(ngModel)]="ciudad" type="text"  >
                                             </div>
                                         </div>
-                                        <div class="form-group form-row">
-                                            <label class="col-md-3"></label>
-                                            <div class="col-md-9">
-                                                <input type="hidden" formControlName="id">
-                                                <button type="submit"  class="btn btn-outline-success">Guardar</button>
+                                        <div class="col-xs-12 col-md-6 col-xl-6">
+                                            <div class="form-group local-forms">
+                                                <label>Hora <span class="login-danger">*</span></label>
+                                                <input class="form-control"  name="hora" [ngModelOptions]="{standalone: true}"   [(ngModel)]="hora" type="time"  >
                                             </div>
                                         </div>
-                                    </form>
-            
-            
+                                        <div class="col-xs-12">
+                                            <div class="form-group local-forms">
+                                                <label>Ubicacion <span class="login-danger">*</span></label>
+                                                <textarea class="form-control"  name="ubicacion" [ngModelOptions]="{standalone: true}"   [(ngModel)]="ubicacion"></textarea>
+                                               
+                                            </div>
+                                        </div>
+                                        
+                                        <!-- <div class="col-12 col-md-4 col-xl-4">
+                                            <div class="form-group local-forms">
+                                                <label >Date<span class="login-danger">*</span></label>
+                                            </div>
+                                        </div> -->
+        
+                                    </div>
+                                    <div class="col-12 mb-3 doctor-submit text-end">
+                                        <button class="btn btn-primary btn-sm" (click)="addSTOGoal()">Agregar a la lista</button>
+                                    </div>
+                                </div>
+                            </div>
+    
+                        </div>
+                        <div class="card-footer">
+                            <button type="submit" class="btn btn-primary btn-sm" (click)="saveGoal()">Salvar</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-6 form-group">
+                <div class="row">
+                    <div class="col-lg-12 card">
+                        <table class="table mb-0">
+                            <thead>
+                                <tr>
+                                    <th>Ciudad</th>
+                                    <!-- <th>Ubicación</th>-->
+                                    <th>Hora</th> 
+                                    <th>Options</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let ciud of ciudadesList; let i = index">
+                                    <td>
+                                        {{ciud.ciudad}}
+                                    </td>
+                                    <!-- <td>
+                                         {{ciud.ubicacion}}
+                                    </td> -->
+                                    <td>
+                                         {{ciud.hora}}
+                                    </td>
+                                    <td>
+                                        
+                                        <button class="btn btn-danger btn-sm" (click)="deleteSTOGoal(i)">x</button>
+                                        <button class="btn btn-primary btn-sm" (click)="selectedDireccion(ciud)"><i class="fa fa-pencil"></i>Editar</button>
+                                        <!-- <button class="btn btn-primary btn-sm" (click)="seleccionarParaEdit(ciud,i)"
+                                        data-bs-toggle="modal" [attr.data-bs-target]="'#edit-family-'+ciud.i"> <i class="fa fa-pencil"></i>Editar</button> -->
+                                    </td>
+
+                                </tr>
+                                
+                                
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+    
+                 
+    
+    
+                <div class="rbt-dashboard-table table-responsive mobile-table-750 tarea" *ngIf="tareaSelected" >
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="container">
+                                <div class="row ">
+                                    <div class="col-xs-12 col-md-6 col-xl-6">
+                                        <div class="form-group local-forms">
+                                            <label>Ciudad <span class="login-danger">*</span></label>
+                                            <input class="form-control" disabled  name="ciudad"[ngModelOptions]="{standalone: true}"    [(ngModel)]="tareaSelected.ciudad" type="text"  >
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12 col-md-6 col-xl-6">
+                                        <div class="form-group local-forms">
+                                            <label>Hora <span class="login-danger">*</span></label>
+                                            <input class="form-control"  name="hora" [ngModelOptions]="{standalone: true}"   [(ngModel)]="tareaSelected.hora" type="time"  >
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <div class="form-group local-forms">
+                                            <label>Ubicacion <span class="login-danger">*</span></label>
+                                            <textarea class="form-control"  name="ubicacion" [ngModelOptions]="{standalone: true}"   [(ngModel)]="tareaSelected.ubicacion"></textarea>
+                                           
+                                        </div>
+                                    </div>
+                                    <div class="col-12 mb-3 doctor-submit text-end">
+                                        <button class="btn btn-primary btn-sm" (click)="cambiarStatus(family_edit, i)">Update Info</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Datos Envento
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <div class="card-body">
-                            <app-datos-victimas></app-datos-victimas>
-                        </div>
-                    </div>
+                <div *ngIf="tareaSelected">
+                    <button class="btn btn-primary btn-sm" (click)="tareaSelected = null">Regresar</button>
                 </div>
             </div>
+    
+    
+            
         </div>
     </div>
 </section>
